fix spacing product page, add title product name

--- a/css/product.css
+++ b/css/product.css
@@ -2,3 +2,7 @@
   padding-top: 0;
   padding-bottom: 24px;
 }
+
+.product-page__availability {
+  padding-bottom: 24px;
+}
